# aperio

./: .gitignore  Cargo.toml  build.rs  index.html  package-lock.json  package.json  pyproject.toml  rolldown.config.js  tsconfig.app.json  tsconfig.main.json  vite.config.ts
plugins/base/: __init__.py
plugins/base/objects/: test.py  test.wgsl
scripts/: copy-python.sh
src-python/: pyproject.toml
src-python/src/aperio_plugin/: __init__.py  utils.py
src-python/src/aperio_plugin/plugin_base/: __init__.py  generator_base.py
src-python/src/aperio_plugin/shaders/: compose.wgsl
src-python/src/aperio_plugin/taichi/: kernels.py
src-python/src/aperio_plugin/types/: frame_structure.py
src/gpu_util/: Cargo.toml
src/gpu_util/src/: compiled_func.rs  compiled_wgsl.rs  image_generate_builder.rs  image_generator.rs  lib.rs  texture_to_native.rs
src/gpu_util/src/image_generator/: cpu_func_process.rs  final_process.rs  parallel_process.rs  wgsl_process.rs
src/gpu_util/src/shaders/: f32_to_f16.wgsl  post_process.wgsl
src/gpu_util/src/texture_to_native/: linux.rs
src/main/: getPlatform.ts  main.ts  nativeModule.ts
src/native/: Cargo.toml  app_config.rs  dir_util.rs  error.rs  lib.rs
src/native/python/: initialize.rs  utils.rs
src/native/src/: app_config.rs  dir_util.rs  lib.rs  shared_texture.rs  structs.rs  util.rs
src/native/src/python/: initialize.rs  utils.rs
src/preload/: main.ts
src/renderer/: App.tsx  FrameRenderer.tsx  bridge.ts  index.css  store.ts  types.d.ts
src/renderer/dock/: Dock.tsx  dockWidgetContext.ts
src/renderer/frameRenderer/: FrameBufferRenderer.tsx  FrameTextureRenderer.tsx
src/renderer/timeline/: Timeline.tsx
src/wrapper/: Cargo.toml  pyproject.toml
src/wrapper/src/: lib.rs
