
[package]
authors = ["John Doe <john@doe.com>"]
edition = "2021"
name = "aperio"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
path = "src/native/lib.rs"

[dependencies]
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
tokio = { version = "1.48.0", features = ["macros", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
numpy = "0.26.0"
toml_edit = "0.23.7"
thiserror = "2.0.17"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
