[project]
name = "aperio-plugin-stubs"
version = "0.1.0"
description = "A stub-only package for aperio plugin development"
requires-python = "~=3.13.0"
dependencies = [
    "numpy>=2.3.3",
]
classifiers = [
    "Typing :: Stubs Only"
]

[tool.setuptools]
package-dir = { "" = "out" }
packages = { find = { where = ["out"] } }

[tool.setuptools.package-data]
"aperio_plugin" = ["*.pyi"]