[package]
name = "gpu_util"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { workspace = true }
futures = "0.3.31"
rayon = "1.11.0"
bytemuck = "1.24.0"
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
# Linux only: as of kernel version 5.10.0
drm-fourcc = "2.2"
ash = { version = "0.38", features = ["linked"] }
wgpu-hal = "27.0.4"
